# medicoapp

./: .gitignore  package-lock.json  package.json  vitest.config.ts
.claude/: launch.json
.github/: CODEOWNERS  branch-protection.json  ci-builder-image
Prototype mockup/: case-workspace-prototype.html  case-workspace-v2.html  case-workspace-v3.html  case-workspace-v4.html  timeline-prototype.html
backend/: package-lock.json  package.json
backend/src-tauri/: Cargo.toml  build.rs  ner.py  nlp_service.py  tauri.conf.json
backend/src-tauri/src/: adapter_step6_input.rs  assertion.rs  canonical_case.rs  case_events.rs  clinical_event_adapter.rs  clinical_events.rs  clinical_fact_store.rs  clinical_knowledge_graph.rs  clinical_state.rs  cluster_graph_analysis.rs  cluster_graph_narrative.rs  contradiction_cluster_graph.rs  contradiction_engine.rs  contradiction_enrichment.rs  contradiction_export.rs  contradiction_forecast_readiness.rs  contradiction_graph.rs  contradiction_graph_projection.rs  contradiction_input_adapter.rs  contradiction_monitoring_dashboard.rs  contradiction_monitoring_queue.rs  contradiction_observability_root.rs  contradiction_report.rs  contradiction_report_diff.rs  contradiction_report_evolution.rs  contradiction_report_history.rs  contradiction_report_snapshot.rs  contradiction_report_trends.rs  contradiction_snapshot_file_repository.rs  contradiction_snapshot_repository.rs  dates.rs  entity_clean.rs  event_contracts.rs  event_dispatch.rs  event_projection_contracts.rs  event_store.rs  event_unification.rs  events.rs  fact_assertion.rs  fact_contradiction.rs  (+40 more)
backend/src-tauri/xtask/: Cargo.toml
backend/src-tauri/xtask/src/: main.rs
docs/: PRD.md
frontend/: index.html  package-lock.json  package.json  (+3 more)
(+238 files in other folders)
