[package]
name = "backend"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "medicolegaltemplate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
# default build — no native OCR dependency required
default = []
# enable with: cargo build --features ocr
# requires: brew install tesseract
ocr = ["dep:leptess"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
pdf-extract = "0.7"
zip = "2"
leptess = { version = "0.14", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }

# Event sourcing foundation (Step 3a)
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Persistence-boundary medico-legal integrity. Real SHA-256 for the
# chain-of-custody anchor (`DocumentExtracted.source_bytes_sha256`),
# the freeze-point digest (`clean_text_sha256`), and the content-derived
# globally-unique ClinicalEvent id. `sha2` is already a transitive
# dependency of rusqlite-bundled, so this adds no compile-time cost.
sha2 = "0.10"

